[package]
name = "rustls-symcrypt-examples"
version = "0.0.1"
authors = ["Microsoft"]
license = "Apache-2.0 OR ISC OR MIT"
description = "rustls-symcrypt example code"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rustls-symcrypt = {path = "../rustls-symcrypt"}
rustls = { version = "0.23.0", default-features = false, features = ["tls12", "std", "custom-provider"]}
webpki-roots = "0.26"
webpki = {package = "rustls-webpki", default-features = false, version = "0.102", features = ["alloc"]}
rustls-pemfile = "2.1.0"
rustls-pki-types = "1.10"
cmake = "0.1"
once_cell = "1.8.0"
hex = "0.4"

rustls-platform-verifier = "0.5.0"

rustls-cng = "0.6.0"
anyhow = "1.0"


[[bin]]
name = "sample_internet_client"
path = "bin/sample_internet_client.rs"

[[bin]]
name = "sample_server"
path = "bin/sample_server.rs"

[[bin]]
name = "sample_local_client"
path = "bin/sample_local_client.rs"

[[bin]]
name = "sample_internet_client_platform"
path = "bin/sample_internet_client_platform.rs"

[[bin]]
name = "sample_windows_client_server"
path = "bin/sample_windows_client_server.rs"
