[package]
name = "rustls-symcrypt"
authors = ["Microsoft"]
version = "0.2.1"
license = "Apache-2.0 OR ISC OR MIT"
description = "Implementation of rustls crypto provider model for SymCrypt"
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/microsoft/SymCrypt"
repository = "https://github.com/microsoft/rustls-symcrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.23.0", default-features = false, features = ["tls12", "std", "custom-provider"]}
symcrypt = { path = "../../rust-symcrypt/rust-symcrypt", version = "0.5.1" }
rustls-pki-types = "1.11.0"
pkcs1 = { version = "0.7.5", features = ["alloc"], default-features = false }
pkcs8 = "0.10"
sec1 = "0.7.0"
der = "0.7.9"

[features]
default = []
x25519 = []
chacha = []

[dev-dependencies]
rustls-pemfile = "2"
webpki-roots = "0.26"
log = "0.4.20"
env_logger = "0.11"
once_cell = "1.8.0"
lazy_static = "1.4.0"
